// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Variables can add a string variable 1`] = `
<div>
  <div
    class="customVariables"
  >
    <div
      class="headerRow"
    >
      <div />
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          <span>
            common.addVariable
          </span>
        </span>
      </button>
    </div>
    <div
      class="variableListTable"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main"
        style="--text-line-clamp: 1;"
      >
        <span>
          customVariables.variableAndType
        </span>
      </p>
      <div
        class="valueRow"
      >
        <div>
          <div
            class="bp3-form-group variableInput"
          >
            
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              >
                <div
                  class="bp3-input-group MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="variables[0].value"
                    type="text"
                    value="myVarValue"
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <section
            class="actionButtons"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                  data-testid="edit-variable-0"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                  data-testid="delete-variable-0"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-trash StyledProps--main"
                    icon="trash"
                  >
                    <svg
                      data-icon="trash"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        trash
                      </desc>
                      <path
                        d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Custom Variables can delete variable: After Delete 1`] = `
<div>
  <div
    class="customVariablesStage"
  >
    <div
      class="tableRow headerRow"
    >
      <span>
        name
      </span>
      <span>
        typeLabel
      </span>
      <span>
        valueLabel
      </span>
      <div />
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[0].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[0].type"
      >
        string
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[0].value"
                  type="text"
                  value="myVar1Value"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[1].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[1].type"
      >
        number
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[1].value"
                  type="number"
                  value="1234"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
      data-testid="add-variable"
      test-id="add-variable"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        <span>
          common.addVariable
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Custom Variables can delete variable: Before Delete 1`] = `
<div>
  <div
    class="customVariablesStage"
  >
    <div
      class="tableRow headerRow"
    >
      <span>
        name
      </span>
      <span>
        typeLabel
      </span>
      <span>
        valueLabel
      </span>
      <div />
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[0].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[0].type"
      >
        string
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[0].value"
                  type="text"
                  value="myVar1Value"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[1].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[1].type"
      >
        number
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[1].value"
                  type="number"
                  value="1234"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[2].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[2].type"
      >
        secretType
      </span>
      <div
        class="valueColumn"
        data-type="RUNTIME"
      >
        <div
          class="bp3-form-group"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              style="flex-grow: 1;"
            >
              <div
                class="TextInput--main MultiTypeInput--input"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="variables[2].value"
                    placeholder="<+input>"
                    type="text"
                    value="<+input>"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="runtime-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="current-color"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          id="configureOptions"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cog StyledProps--main"
            icon="cog"
          >
            <svg
              data-icon="cog"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cog
              </desc>
              <path
                d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-2"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-2"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
      data-testid="add-variable"
      test-id="add-variable"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        <span>
          common.addVariable
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Custom Variables handles secrets correctly 1`] = `Promise {}`;

exports[`Custom Variables should render edit view as new step 1`] = `
<div>
  <div
    class="customVariables"
  >
    <div
      class="headerRow"
    >
      <div />
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          <span>
            common.addVariable
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Custom Variables should render variables 1`] = `
<div>
  <div
    class="customVariablesStage"
  >
    <div
      class="tableRow headerRow"
    >
      <span>
        name
      </span>
      <span>
        typeLabel
      </span>
      <span>
        valueLabel
      </span>
      <div />
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[0].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[0].type"
      >
        string
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[0].value"
                  type="text"
                  value="myVar1Value"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-0"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[1].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[1].type"
      >
        number
      </span>
      <div
        class="valueColumn"
        data-type="FIXED"
      >
        <div
          class="bp3-form-group variableInput"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            >
              <div
                class="bp3-input-group MultiTypeInput--input"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="variables[1].value"
                  type="number"
                  value="1234"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-1"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="tableRow"
    >
      <div
        class="textInputWithCopyBtn disabled"
      >
        <div
          class="bp3-form-group bp3-disabled input"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group bp3-disabled"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                disabled=""
                name="variables[2].name"
                type="text"
                value="myVar1"
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-popover-wrapper popoverWrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="copy-alt"
              >
                <svg
                  fill="none"
                  height="12"
                  viewBox="0 0 8 9"
                  width="12"
                >
                  <path
                    clip-rule="evenodd"
                    d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        class="valueString"
        data-testid="variables[2].type"
      >
        secretType
      </span>
      <div
        class="valueColumn"
        data-type="RUNTIME"
      >
        <div
          class="bp3-form-group"
        >
          
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              style="flex-grow: 1;"
            >
              <div
                class="TextInput--main MultiTypeInput--input"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="variables[2].value"
                    placeholder="<+input>"
                    type="text"
                    value="<+input>"
                  />
                </div>
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="runtime-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 10 7.97"
                        width="12"
                      >
                        <path
                          d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                          fill="current-color"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
        <button
          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          id="configureOptions"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-cog StyledProps--main"
            icon="cog"
          >
            <svg
              data-icon="cog"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                cog
              </desc>
              <path
                d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <div
          class="actionButtons"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="edit-variable-2"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                >
                  <svg
                    data-icon="edit"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                data-testid="delete-variable-2"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-trash StyledProps--main"
                  icon="trash"
                >
                  <svg
                    data-icon="trash"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      trash
                    </desc>
                    <path
                      d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
      data-testid="add-variable"
      test-id="add-variable"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-plus StyledProps--main"
        icon="plus"
      >
        <svg
          data-icon="plus"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            plus
          </desc>
          <path
            d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        <span>
          common.addVariable
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Custom Variables validates input set correctly 1`] = `
Object {
  "variables": Array [
    Object {
      "value": undefined,
    },
  ],
}
`;
